--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -1,4 +1,3 @@
-
 # .github/workflows/ci-cd-pipeline.yml
 
 name: CI/CD Trustclaim Backend
@@ -14,15 +13,23 @@ on:
 jobs:
   Deployment:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v2
-      - name: Git pull
-        env:
-          PRIVATE_KEY: ${{ secrets.PRIVATE_KEY  }}
-          PUBLIC_IP: ${{ secrets.PUBLIC_IP  }}
-          SERVER_USERNAME: ${{ secrets.SERVER_USERNAME  }}
+
+      - name: Set up SSH key
         run: |
-          pwd
-          echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
-          ssh -o StrictHostKeyChecking=no -i private_key ${SERVER_USERNAME}@${PUBLIC_IP} 
-            cd ${WORKSPACE} && bash deploy.sh
+          mkdir -p ~/.ssh
+          echo "${{ secrets.PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan -H ${{ secrets.PUBLIC_IP }} >> ~/.ssh/known_hosts
+
+      - name: Git pull and deploy
+        env:
+          PUBLIC_IP: ${{ secrets.PUBLIC_IP }}
+          SERVER_USERNAME: ${{ secrets.SERVER_USERNAME }}
+        run: |
+          ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ${{ secrets.SERVER_USERNAME }}@${{ secrets.PUBLIC_IP }} << 'EOF'
+            cd ${WORKSPACE}
+            git pull
+            bash deploy.sh
