--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -10,32 +10,18 @@ on:
     branches:
       - master
 
-concurrency:
-  group: master
-  cancel-in-progress: true
-
 jobs:
-  deploy:
-    name: Deploy
-    runs-on: self-hosted
+  Deployment:
+    runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Configure SSH
+      - uses: actions/checkout@v2
+      - name: Git pull
         env:
-          SSH_PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
-          SSH_HOST: ${{ secrets.PUBLIC_IP }}
-          SSH_USER: ${{ secrets.SERVER_USERNAME }}
+          PRIVATE_KEY: ${{ secrets.PRIVATE_KEY  }}
+          PUBLIC_IP: ${{ secrets.PUBLIC_IP  }}
+          SERVER_USERNAME: ${{ secrets.SERVER_USERNAME  }}
         run: |
-          mkdir -p ~/.ssh/
-          echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          echo -e "Host target\n  HostName $SSH_HOST\n  User $SSH_USER\n  IdentityFile ~/.ssh/id_rsa\n  LogLevel ERROR\n  StrictHostKeyChecking no" > ~/.ssh/config
-          
-          # Debug: Print the SSH config to verify its contents
-          cat ~/.ssh/config
-
-      - name: Pull and Deploy Changes
-        run: |
-          ssh target "cd /data/trust_claim_backend && git pull origin master && npm i && npm audit fix --force && npx prisma generate && npx prisma migrate deploy && npm run build && sudo systemctl restart nginx"
+          pwd
+          echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
+          ssh -o StrictHostKeyChecking=no -i private_key ${SERVER_USERNAME}@${PUBLIC_IP} 
+          cd ${WORKSPACE} && bash deploy.sh
