--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -15,13 +15,21 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+
+      - name: Debug environment variables
+        run: |
+          echo "PRIVATE_KEY is set: ${PRIVATE_KEY:+yes}"
+          echo "PUBLIC_IP is set: ${PUBLIC_IP:+yes}"
+          echo "SERVER_USERNAME is set: ${SERVER_USERNAME:+yes}"
+
       - name: Git pull
         env:
-          PRIVATE_KEY: ${{ secrets.PRIVATE_KEY  }}
-          PUBLIC_IP: ${{ secrets.PUBLIC_IP  }}
-          SERVER_USERNAME: ${{ secrets.SERVER_USERNAME  }}
+          PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
+          PUBLIC_IP: ${{ secrets.PUBLIC_IP }}
+          SERVER_USERNAME: ${{ secrets.SERVER_USERNAME }}
+          WORKSPACE: ${{ github.workspace }}
         run: |
           pwd
           echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
-          ssh -o StrictHostKeyChecking=no -i private_key ${SERVER_USERNAME}@${PUBLIC_IP} 
-          cd ${WORKSPACE} && bash deploy.sh
+          ssh -vvv -o StrictHostKeyChecking=no -i private_key ${SERVER_USERNAME}@${PUBLIC_IP} << 'EOF'
+            cd ${WORKSPACE} && bash deploy.sh
