--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -15,21 +15,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-
-      - name: Debug environment variables
-        run: |
-          echo "PRIVATE_KEY is set: ${{secrets.PRIVATE_KEY}}"
-          echo "PUBLIC_IP is set: ${{ secrets.PUBLIC_IP }}"
-          echo "SERVER_USERNAME is set: ${{ secrets.SERVER_USERNAME }}"
-
       - name: Git pull
         env:
-          PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
-          PUBLIC_IP: ${{ secrets.PUBLIC_IP }}
-          SERVER_USERNAME: ${{ secrets.SERVER_USERNAME }}
-          WORKSPACE: "/data/trust_claim_backend/"
+          PRIVATE_KEY: ${{ secrets.PRIVATE_KEY  }}
+          PUBLIC_IP: ${{ secrets.PUBLIC_IP  }}
+          SERVER_USERNAME: ${{ secrets.SERVER_USERNAME  }}
         run: |
           pwd
           echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
-          ssh -vvv -o StrictHostKeyChecking=no -i private_key ${SERVER_USERNAME}@${PUBLIC_IP}
+          ssh -o StrictHostKeyChecking=no -i private_key ${SERVER_USERNAME}@${PUBLIC_IP} 
           cd ${WORKSPACE} && bash deploy.sh
