--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -20,6 +20,7 @@ jobs:
           PRIVATE_KEY: ${{ secrets.PRIVATE_KEY  }}
           PUBLIC_IP: ${{ secrets.PUBLIC_IP  }}
           SERVER_USERNAME: ${{ secrets.SERVER_USERNAME  }}
+          WORKSPACE : ${{WORKSPACE}}
         run: |
           pwd
           echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
