--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -28,10 +28,10 @@ jobs:
             WORKSPACE=/data/trust_claim_backend
             if [ ! -d "$WORKSPACE" ]; then
               echo "Directory $WORKSPACE does not exist. Creating it..."
-              sudo mkdir -p $WORKSPACE
+              mkdir -p $WORKSPACE
             fi
             cd $WORKSPACE
-            sudo git clone https://github.com/Whats-Cookin/trust_claim_backend.git .
-            sudo touch .env
-            sudo echo "${{ secrets.ENV }}" > .env
-            sudo bash deploy.sh
+            git clone https://github.com/Whats-Cookin/trust_claim_backend.git .
+            touch .env
+            echo "${{ secrets.ENV }}" > .env
+            bash deploy.sh
