--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -20,6 +20,7 @@ jobs:
           PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
           PUBLIC_IP: ${{ secrets.PUBLIC_IP }}
           SERVER_USERNAME: ${{ secrets.SERVER_USERNAME }}
+          ENV: ${{ secrets.ENV }}
         run: |
           pwd
           echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
@@ -28,10 +29,14 @@ jobs:
             WORKSPACE=/data/trust_claim_backend
             if [ ! -d "$WORKSPACE" ]; then
               echo "Directory $WORKSPACE does not exist. Creating it..."
-              sudo mkdir -p $WORKSPACE
+              mkdir -p $WORKSPACE
             fi
             cd $WORKSPACE
-            sudo git clone https://github.com/Whats-Cookin/trust_claim_backend.git .
-            sudo touch .env
-            sudo echo "${{ secrets.ENV }}" > .env
-            sudo bash deploy.sh
+            if [ ! -d ".git" ]; then
+              git clone https://github.com/Whats-Cookin/trust_claim_backend.git .
+            else
+              git pull origin master
+            fi
+            touch .env
+            echo "${ENV}" > .env
+            bash deploy.sh
