--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Git pull
+      - name: BUSINESS LOGIC
         env:
           PRIVATE_KEY: ${{ secrets.PRIVATE_KEY  }}
           PUBLIC_IP: ${{ secrets.PUBLIC_IP  }}
@@ -24,4 +24,4 @@ jobs:
           pwd
           echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
           ssh -o StrictHostKeyChecking=no -i private_key ${SERVER_USERNAME}@${PUBLIC_IP} 
-          cd ${WORKSPACE} && pwd && whoami
+          pwd && whoami 
