--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -15,7 +15,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [16.x,18.x, 20.x]
+        node-version: [12.x,20.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
@@ -45,7 +45,7 @@ jobs:
         echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
         ssh -o StrictHostKeyChecking=no -i private_key ${SERVER_USERNAME}@${PUBLIC_IP}
           set -e
-          WORKSPACE=$HOME/trust_claim_backend
+          WORKSPACE=/data/trust_claim_backend
           if [ ! -d "$WORKSPACE" ]; then
             echo "Directory $WORKSPACE does not exist. Creating it..."
             mkdir -p $WORKSPACE
