--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -38,4 +38,5 @@ jobs:
           END
       - name: Run deploy
         run: |
+          ssh -o StrictHostKeyChecking=no -i private_key ${SERVER_USERNAME}@${PUBLIC_IP}
           ssh target "cd /data/trust_claim_backend && git pull origin master && pwd && whoami"
