--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -38,5 +38,6 @@ jobs:
           END
       - name: Run deploy
         run: |
+          echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
           ssh -o StrictHostKeyChecking=no -i private_key ${SERVER_USERNAME}@${PUBLIC_IP}
           ssh target "cd /data/trust_claim_backend && git pull origin master && pwd && whoami"
